# llm_adsorbate

./: .bumpversion.cfg  .gitignore  CITATION.cff  LICENSE  README.md  TODO.md  app.py  draft.ipynb  launch.sh  main.py  md.traj  md_traj.xyz  pyproject.toml  relax.traj  relaxed_ads_slab.xyz  setup.cfg
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
notebooks/: NiFeO_slab.xyz  cu_slab_211.xyz  test_slab.xyz  testing.ipynb
src/agent/: agent.py  prompts.py
src/app/: app.py
src/llm_adsorbate/: __init__.py  __main__.py  cli.py  version.py
src/tools/: test_tools.py  tools.py
tests/: __init__.py  test_version.py
