[project]
name = "llm-adsorbate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.26.0",
    "dotenv>=0.9.9",
    "llm-openrouter>=0.4.1",
    "requests>=2.32.5",
    "autoadsorbate>=0.2.2",
    "pandas>=2.3.2",
    "weave>=0.52.6",
    "langchain-openai>=0.3.33",
    "langgraph-codeact>=0.1.3",
    "scikit-learn>=1.7.2",
]
