[project]
name = "llm-adsorbate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.26.0",
    "dotenv>=0.9.9",
    "llm-openrouter>=0.4.1",
    "requests>=2.32.5",
    "autoadsorbate>=0.2.2",
    "pandas>=2.3.2",
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.33",
    "langgraph-codeact>=0.1.3",
    "llm-openrouter>=0.4.1",
    "requests>=2.32.5",
    "autoadsorbate>=0.2.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch==2.2.1",
    "mace>=1.1.2",
    "streamlit>=1.49.1",
]

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
weave = ["weave>=0.52.6"]
